@@ -1,3 +1,12 @@
+2002-08-12  Jochen Wiedmann  <joe@ispsoft.de> (0.2018)
+
+	* t/dbdadmin.t: The call to func('createdb') was
+	  missing user name and password. Wolfgang Friebel
+	  <friebel@ifh.de>
+	* mysql.xs: If the connect in func('...', 'admin')
+	  failed, a core dump was triggered. Wolfgang
+	  Friebel <friebelqifh.de>
+
 2002-05-02  Jochen Wiedmann  <joe@ispsoft.de> (0.2017)
 
 	* dbdimp.c: Added a required check for mysql_errno.
